# serializer version: 1
# name: test_malformed_json_ignored[Model-param_overrides0]
  dict({
    'session_id': 'deadbeef-0327-1138-2187-c01dc0ffee77',
    'type': 'hello',
    'version': dict({
      'bdbox': '11.38.77',
      'protocol': 2,
    }),
    'viewer_port': 3939,
  })
# ---
# name: test_malformed_json_ignored[Model-param_overrides0].1
  dict({
    'model_info': dict({
      'class_name': None,
      'filename': None,
      'module_name': None,
    }),
    'params': dict({
      'overrides': dict({
      }),
      'values': dict({
        'count': 3,
        'width': 10.0,
      }),
    }),
    'schema': dict({
      'properties': dict({
        'count': dict({
          'default': 3,
          'type': 'number',
        }),
        'width': dict({
          'default': 10.0,
          'type': 'number',
        }),
      }),
      'required': list([
        'count',
        'width',
      ]),
      'type': 'object',
      'x-presets': list([
        dict({
          'name': 'small',
          'values': dict({
            'count': 1,
            'width': 5.0,
          }),
        }),
      ]),
    }),
    'type': 'model.details',
  })
# ---
# name: test_malformed_json_ignored[Params-param_overrides0]
  dict({
    'session_id': 'deadbeef-0327-1138-2187-c01dc0ffee77',
    'type': 'hello',
    'version': dict({
      'bdbox': '11.38.77',
      'protocol': 2,
    }),
    'viewer_port': 3939,
  })
# ---
# name: test_malformed_json_ignored[Params-param_overrides0].1
  dict({
    'model_info': dict({
      'class_name': None,
      'filename': None,
      'module_name': None,
    }),
    'params': dict({
      'overrides': dict({
      }),
      'values': dict({
        'count': 3,
        'width': 10.0,
      }),
    }),
    'schema': dict({
      'properties': dict({
        'count': dict({
          'default': 3,
          'type': 'number',
        }),
        'width': dict({
          'default': 10.0,
          'type': 'number',
        }),
      }),
      'required': list([
        'count',
        'width',
      ]),
      'type': 'object',
      'x-presets': list([
        dict({
          'name': 'small',
          'values': dict({
            'count': 1,
            'width': 5.0,
          }),
        }),
      ]),
    }),
    'type': 'model.details',
  })
# ---
# name: test_missing_message_fields_ignored[Model-param_overrides0]
  dict({
    'session_id': 'deadbeef-0327-1138-2187-c01dc0ffee77',
    'type': 'hello',
    'version': dict({
      'bdbox': '11.38.77',
      'protocol': 2,
    }),
    'viewer_port': 3939,
  })
# ---
# name: test_missing_message_fields_ignored[Model-param_overrides0].1
  dict({
    'model_info': dict({
      'class_name': None,
      'filename': None,
      'module_name': None,
    }),
    'params': dict({
      'overrides': dict({
      }),
      'values': dict({
        'count': 3,
        'width': 10.0,
      }),
    }),
    'schema': dict({
      'properties': dict({
        'count': dict({
          'default': 3,
          'type': 'number',
        }),
        'width': dict({
          'default': 10.0,
          'type': 'number',
        }),
      }),
      'required': list([
        'count',
        'width',
      ]),
      'type': 'object',
      'x-presets': list([
        dict({
          'name': 'small',
          'values': dict({
            'count': 1,
            'width': 5.0,
          }),
        }),
      ]),
    }),
    'type': 'model.details',
  })
# ---
# name: test_missing_message_fields_ignored[Params-param_overrides0]
  dict({
    'session_id': 'deadbeef-0327-1138-2187-c01dc0ffee77',
    'type': 'hello',
    'version': dict({
      'bdbox': '11.38.77',
      'protocol': 2,
    }),
    'viewer_port': 3939,
  })
# ---
# name: test_missing_message_fields_ignored[Params-param_overrides0].1
  dict({
    'model_info': dict({
      'class_name': None,
      'filename': None,
      'module_name': None,
    }),
    'params': dict({
      'overrides': dict({
      }),
      'values': dict({
        'count': 3,
        'width': 10.0,
      }),
    }),
    'schema': dict({
      'properties': dict({
        'count': dict({
          'default': 3,
          'type': 'number',
        }),
        'width': dict({
          'default': 10.0,
          'type': 'number',
        }),
      }),
      'required': list([
        'count',
        'width',
      ]),
      'type': 'object',
      'x-presets': list([
        dict({
          'name': 'small',
          'values': dict({
            'count': 1,
            'width': 5.0,
          }),
        }),
      ]),
    }),
    'type': 'model.details',
  })
# ---
# name: test_reset_params[Model-param_overrides]
  dict({
    'session_id': 'deadbeef-0327-1138-2187-c01dc0ffee77',
    'type': 'hello',
    'version': dict({
      'bdbox': '11.38.77',
      'protocol': 2,
    }),
    'viewer_port': 3939,
  })
# ---
# name: test_reset_params[Model-param_overrides].1
  dict({
    'model_info': dict({
      'class_name': None,
      'filename': None,
      'module_name': None,
    }),
    'params': dict({
      'overrides': dict({
        'width': 99.0,
      }),
      'values': dict({
        'count': 3,
        'width': 10.0,
      }),
    }),
    'schema': dict({
      'properties': dict({
        'count': dict({
          'default': 3,
          'type': 'number',
        }),
        'width': dict({
          'default': 10.0,
          'type': 'number',
        }),
      }),
      'required': list([
        'count',
        'width',
      ]),
      'type': 'object',
      'x-presets': list([
        dict({
          'name': 'small',
          'values': dict({
            'count': 1,
            'width': 5.0,
          }),
        }),
      ]),
    }),
    'type': 'model.details',
  })
# ---
# name: test_reset_params[Params-param_overrides]
  dict({
    'session_id': 'deadbeef-0327-1138-2187-c01dc0ffee77',
    'type': 'hello',
    'version': dict({
      'bdbox': '11.38.77',
      'protocol': 2,
    }),
    'viewer_port': 3939,
  })
# ---
# name: test_reset_params[Params-param_overrides].1
  dict({
    'model_info': dict({
      'class_name': None,
      'filename': None,
      'module_name': None,
    }),
    'params': dict({
      'overrides': dict({
        'width': 99.0,
      }),
      'values': dict({
        'count': 3,
        'width': 10.0,
      }),
    }),
    'schema': dict({
      'properties': dict({
        'count': dict({
          'default': 3,
          'type': 'number',
        }),
        'width': dict({
          'default': 10.0,
          'type': 'number',
        }),
      }),
      'required': list([
        'count',
        'width',
      ]),
      'type': 'object',
      'x-presets': list([
        dict({
          'name': 'small',
          'values': dict({
            'count': 1,
            'width': 5.0,
          }),
        }),
      ]),
    }),
    'type': 'model.details',
  })
# ---
# name: test_select_preset_no_model_class[param_overrides0-None]
  dict({
    'session_id': 'deadbeef-0327-1138-2187-c01dc0ffee77',
    'type': 'hello',
    'version': dict({
      'bdbox': '11.38.77',
      'protocol': 2,
    }),
    'viewer_port': 3939,
  })
# ---
# name: test_select_preset_replaces_overrides[Model-param_overrides]
  dict({
    'session_id': 'deadbeef-0327-1138-2187-c01dc0ffee77',
    'type': 'hello',
    'version': dict({
      'bdbox': '11.38.77',
      'protocol': 2,
    }),
    'viewer_port': 3939,
  })
# ---
# name: test_select_preset_replaces_overrides[Model-param_overrides].1
  dict({
    'model_info': dict({
      'class_name': None,
      'filename': None,
      'module_name': None,
    }),
    'params': dict({
      'overrides': dict({
        'width': 99.0,
      }),
      'values': dict({
        'count': 3,
        'width': 10.0,
      }),
    }),
    'schema': dict({
      'properties': dict({
        'count': dict({
          'default': 3,
          'type': 'number',
        }),
        'width': dict({
          'default': 10.0,
          'type': 'number',
        }),
      }),
      'required': list([
        'count',
        'width',
      ]),
      'type': 'object',
      'x-presets': list([
        dict({
          'name': 'small',
          'values': dict({
            'count': 1,
            'width': 5.0,
          }),
        }),
      ]),
    }),
    'type': 'model.details',
  })
# ---
# name: test_select_preset_replaces_overrides[Params-param_overrides]
  dict({
    'session_id': 'deadbeef-0327-1138-2187-c01dc0ffee77',
    'type': 'hello',
    'version': dict({
      'bdbox': '11.38.77',
      'protocol': 2,
    }),
    'viewer_port': 3939,
  })
# ---
# name: test_select_preset_replaces_overrides[Params-param_overrides].1
  dict({
    'model_info': dict({
      'class_name': None,
      'filename': None,
      'module_name': None,
    }),
    'params': dict({
      'overrides': dict({
        'width': 99.0,
      }),
      'values': dict({
        'count': 3,
        'width': 10.0,
      }),
    }),
    'schema': dict({
      'properties': dict({
        'count': dict({
          'default': 3,
          'type': 'number',
        }),
        'width': dict({
          'default': 10.0,
          'type': 'number',
        }),
      }),
      'required': list([
        'count',
        'width',
      ]),
      'type': 'object',
      'x-presets': list([
        dict({
          'name': 'small',
          'values': dict({
            'count': 1,
            'width': 5.0,
          }),
        }),
      ]),
    }),
    'type': 'model.details',
  })
# ---
# name: test_select_preset_unknown_ignored[Model-param_overrides0]
  dict({
    'session_id': 'deadbeef-0327-1138-2187-c01dc0ffee77',
    'type': 'hello',
    'version': dict({
      'bdbox': '11.38.77',
      'protocol': 2,
    }),
    'viewer_port': 3939,
  })
# ---
# name: test_select_preset_unknown_ignored[Model-param_overrides0].1
  dict({
    'model_info': dict({
      'class_name': None,
      'filename': None,
      'module_name': None,
    }),
    'params': dict({
      'overrides': dict({
      }),
      'values': dict({
        'count': 3,
        'width': 10.0,
      }),
    }),
    'schema': dict({
      'properties': dict({
        'count': dict({
          'default': 3,
          'type': 'number',
        }),
        'width': dict({
          'default': 10.0,
          'type': 'number',
        }),
      }),
      'required': list([
        'count',
        'width',
      ]),
      'type': 'object',
      'x-presets': list([
        dict({
          'name': 'small',
          'values': dict({
            'count': 1,
            'width': 5.0,
          }),
        }),
      ]),
    }),
    'type': 'model.details',
  })
# ---
# name: test_select_preset_unknown_ignored[Params-param_overrides0]
  dict({
    'session_id': 'deadbeef-0327-1138-2187-c01dc0ffee77',
    'type': 'hello',
    'version': dict({
      'bdbox': '11.38.77',
      'protocol': 2,
    }),
    'viewer_port': 3939,
  })
# ---
# name: test_select_preset_unknown_ignored[Params-param_overrides0].1
  dict({
    'model_info': dict({
      'class_name': None,
      'filename': None,
      'module_name': None,
    }),
    'params': dict({
      'overrides': dict({
      }),
      'values': dict({
        'count': 3,
        'width': 10.0,
      }),
    }),
    'schema': dict({
      'properties': dict({
        'count': dict({
          'default': 3,
          'type': 'number',
        }),
        'width': dict({
          'default': 10.0,
          'type': 'number',
        }),
      }),
      'required': list([
        'count',
        'width',
      ]),
      'type': 'object',
      'x-presets': list([
        dict({
          'name': 'small',
          'values': dict({
            'count': 1,
            'width': 5.0,
          }),
        }),
      ]),
    }),
    'type': 'model.details',
  })
# ---
# name: test_unknown_message_type_ignored[Model-param_overrides0]
  dict({
    'session_id': 'deadbeef-0327-1138-2187-c01dc0ffee77',
    'type': 'hello',
    'version': dict({
      'bdbox': '11.38.77',
      'protocol': 2,
    }),
    'viewer_port': 3939,
  })
# ---
# name: test_unknown_message_type_ignored[Model-param_overrides0].1
  dict({
    'model_info': dict({
      'class_name': None,
      'filename': None,
      'module_name': None,
    }),
    'params': dict({
      'overrides': dict({
      }),
      'values': dict({
        'count': 3,
        'width': 10.0,
      }),
    }),
    'schema': dict({
      'properties': dict({
        'count': dict({
          'default': 3,
          'type': 'number',
        }),
        'width': dict({
          'default': 10.0,
          'type': 'number',
        }),
      }),
      'required': list([
        'count',
        'width',
      ]),
      'type': 'object',
      'x-presets': list([
        dict({
          'name': 'small',
          'values': dict({
            'count': 1,
            'width': 5.0,
          }),
        }),
      ]),
    }),
    'type': 'model.details',
  })
# ---
# name: test_unknown_message_type_ignored[Params-param_overrides0]
  dict({
    'session_id': 'deadbeef-0327-1138-2187-c01dc0ffee77',
    'type': 'hello',
    'version': dict({
      'bdbox': '11.38.77',
      'protocol': 2,
    }),
    'viewer_port': 3939,
  })
# ---
# name: test_unknown_message_type_ignored[Params-param_overrides0].1
  dict({
    'model_info': dict({
      'class_name': None,
      'filename': None,
      'module_name': None,
    }),
    'params': dict({
      'overrides': dict({
      }),
      'values': dict({
        'count': 3,
        'width': 10.0,
      }),
    }),
    'schema': dict({
      'properties': dict({
        'count': dict({
          'default': 3,
          'type': 'number',
        }),
        'width': dict({
          'default': 10.0,
          'type': 'number',
        }),
      }),
      'required': list([
        'count',
        'width',
      ]),
      'type': 'object',
      'x-presets': list([
        dict({
          'name': 'small',
          'values': dict({
            'count': 1,
            'width': 5.0,
          }),
        }),
      ]),
    }),
    'type': 'model.details',
  })
# ---
# name: test_update_param_accumulates[Model-param_overrides0]
  dict({
    'session_id': 'deadbeef-0327-1138-2187-c01dc0ffee77',
    'type': 'hello',
    'version': dict({
      'bdbox': '11.38.77',
      'protocol': 2,
    }),
    'viewer_port': 3939,
  })
# ---
# name: test_update_param_accumulates[Model-param_overrides0].1
  dict({
    'model_info': dict({
      'class_name': None,
      'filename': None,
      'module_name': None,
    }),
    'params': dict({
      'overrides': dict({
      }),
      'values': dict({
        'count': 3,
        'width': 10.0,
      }),
    }),
    'schema': dict({
      'properties': dict({
        'count': dict({
          'default': 3,
          'type': 'number',
        }),
        'width': dict({
          'default': 10.0,
          'type': 'number',
        }),
      }),
      'required': list([
        'count',
        'width',
      ]),
      'type': 'object',
      'x-presets': list([
        dict({
          'name': 'small',
          'values': dict({
            'count': 1,
            'width': 5.0,
          }),
        }),
      ]),
    }),
    'type': 'model.details',
  })
# ---
# name: test_update_param_accumulates[Params-param_overrides0]
  dict({
    'session_id': 'deadbeef-0327-1138-2187-c01dc0ffee77',
    'type': 'hello',
    'version': dict({
      'bdbox': '11.38.77',
      'protocol': 2,
    }),
    'viewer_port': 3939,
  })
# ---
# name: test_update_param_accumulates[Params-param_overrides0].1
  dict({
    'model_info': dict({
      'class_name': None,
      'filename': None,
      'module_name': None,
    }),
    'params': dict({
      'overrides': dict({
      }),
      'values': dict({
        'count': 3,
        'width': 10.0,
      }),
    }),
    'schema': dict({
      'properties': dict({
        'count': dict({
          'default': 3,
          'type': 'number',
        }),
        'width': dict({
          'default': 10.0,
          'type': 'number',
        }),
      }),
      'required': list([
        'count',
        'width',
      ]),
      'type': 'object',
      'x-presets': list([
        dict({
          'name': 'small',
          'values': dict({
            'count': 1,
            'width': 5.0,
          }),
        }),
      ]),
    }),
    'type': 'model.details',
  })
# ---
# name: test_ws_broadcast_reaches_client[Model-param_overrides0-run_error]
  dict({
    'session_id': 'deadbeef-0327-1138-2187-c01dc0ffee77',
    'type': 'hello',
    'version': dict({
      'bdbox': '11.38.77',
      'protocol': 2,
    }),
    'viewer_port': 3939,
  })
# ---
# name: test_ws_broadcast_reaches_client[Model-param_overrides0-run_error].1
  dict({
    'model_info': dict({
      'class_name': None,
      'filename': None,
      'module_name': None,
    }),
    'params': dict({
      'overrides': dict({
      }),
      'values': dict({
        'count': 3,
        'width': 10.0,
      }),
    }),
    'schema': dict({
      'properties': dict({
        'count': dict({
          'default': 3,
          'type': 'number',
        }),
        'width': dict({
          'default': 10.0,
          'type': 'number',
        }),
      }),
      'required': list([
        'count',
        'width',
      ]),
      'type': 'object',
      'x-presets': list([
        dict({
          'name': 'small',
          'values': dict({
            'count': 1,
            'width': 5.0,
          }),
        }),
      ]),
    }),
    'type': 'model.details',
  })
# ---
# name: test_ws_broadcast_reaches_client[Model-param_overrides0-run_error].2
  dict({
    'elapsed_ms': 234,
    'status': 'error',
    'type': 'model.status',
  })
# ---
# name: test_ws_broadcast_reaches_client[Model-param_overrides0-run_ok]
  dict({
    'session_id': 'deadbeef-0327-1138-2187-c01dc0ffee77',
    'type': 'hello',
    'version': dict({
      'bdbox': '11.38.77',
      'protocol': 2,
    }),
    'viewer_port': 3939,
  })
# ---
# name: test_ws_broadcast_reaches_client[Model-param_overrides0-run_ok].1
  dict({
    'model_info': dict({
      'class_name': None,
      'filename': None,
      'module_name': None,
    }),
    'params': dict({
      'overrides': dict({
      }),
      'values': dict({
        'count': 3,
        'width': 10.0,
      }),
    }),
    'schema': dict({
      'properties': dict({
        'count': dict({
          'default': 3,
          'type': 'number',
        }),
        'width': dict({
          'default': 10.0,
          'type': 'number',
        }),
      }),
      'required': list([
        'count',
        'width',
      ]),
      'type': 'object',
      'x-presets': list([
        dict({
          'name': 'small',
          'values': dict({
            'count': 1,
            'width': 5.0,
          }),
        }),
      ]),
    }),
    'type': 'model.details',
  })
# ---
# name: test_ws_broadcast_reaches_client[Model-param_overrides0-run_ok].2
  dict({
    'elapsed_ms': 123,
    'status': 'done',
    'type': 'model.status',
  })
# ---
# name: test_ws_broadcast_reaches_client[Model-param_overrides0-run_start]
  dict({
    'session_id': 'deadbeef-0327-1138-2187-c01dc0ffee77',
    'type': 'hello',
    'version': dict({
      'bdbox': '11.38.77',
      'protocol': 2,
    }),
    'viewer_port': 3939,
  })
# ---
# name: test_ws_broadcast_reaches_client[Model-param_overrides0-run_start].1
  dict({
    'model_info': dict({
      'class_name': None,
      'filename': None,
      'module_name': None,
    }),
    'params': dict({
      'overrides': dict({
      }),
      'values': dict({
        'count': 3,
        'width': 10.0,
      }),
    }),
    'schema': dict({
      'properties': dict({
        'count': dict({
          'default': 3,
          'type': 'number',
        }),
        'width': dict({
          'default': 10.0,
          'type': 'number',
        }),
      }),
      'required': list([
        'count',
        'width',
      ]),
      'type': 'object',
      'x-presets': list([
        dict({
          'name': 'small',
          'values': dict({
            'count': 1,
            'width': 5.0,
          }),
        }),
      ]),
    }),
    'type': 'model.details',
  })
# ---
# name: test_ws_broadcast_reaches_client[Model-param_overrides0-run_start].2
  dict({
    'started_at': '1977-05-25T11:38:00+00:00',
    'status': 'running',
    'type': 'model.status',
  })
# ---
# name: test_ws_broadcast_reaches_client[Model-param_overrides0-schema]
  dict({
    'session_id': 'deadbeef-0327-1138-2187-c01dc0ffee77',
    'type': 'hello',
    'version': dict({
      'bdbox': '11.38.77',
      'protocol': 2,
    }),
    'viewer_port': 3939,
  })
# ---
# name: test_ws_broadcast_reaches_client[Model-param_overrides0-schema].1
  dict({
    'model_info': dict({
      'class_name': None,
      'filename': None,
      'module_name': None,
    }),
    'params': dict({
      'overrides': dict({
      }),
      'values': dict({
        'count': 3,
        'width': 10.0,
      }),
    }),
    'schema': dict({
      'properties': dict({
        'count': dict({
          'default': 3,
          'type': 'number',
        }),
        'width': dict({
          'default': 10.0,
          'type': 'number',
        }),
      }),
      'required': list([
        'count',
        'width',
      ]),
      'type': 'object',
      'x-presets': list([
        dict({
          'name': 'small',
          'values': dict({
            'count': 1,
            'width': 5.0,
          }),
        }),
      ]),
    }),
    'type': 'model.details',
  })
# ---
# name: test_ws_broadcast_reaches_client[Model-param_overrides0-schema].2
  dict({
    'model_info': dict({
      'class_name': None,
      'filename': 'some_model.py',
      'module_name': None,
    }),
    'params': dict({
      'overrides': dict({
        'foo': 'bar',
      }),
      'values': dict({
        'a': 5.0,
        'b': 'nope',
      }),
    }),
    'type': 'model.details',
  })
# ---
# name: test_ws_broadcast_reaches_client[Params-param_overrides0-run_error]
  dict({
    'session_id': 'deadbeef-0327-1138-2187-c01dc0ffee77',
    'type': 'hello',
    'version': dict({
      'bdbox': '11.38.77',
      'protocol': 2,
    }),
    'viewer_port': 3939,
  })
# ---
# name: test_ws_broadcast_reaches_client[Params-param_overrides0-run_error].1
  dict({
    'model_info': dict({
      'class_name': None,
      'filename': None,
      'module_name': None,
    }),
    'params': dict({
      'overrides': dict({
      }),
      'values': dict({
        'count': 3,
        'width': 10.0,
      }),
    }),
    'schema': dict({
      'properties': dict({
        'count': dict({
          'default': 3,
          'type': 'number',
        }),
        'width': dict({
          'default': 10.0,
          'type': 'number',
        }),
      }),
      'required': list([
        'count',
        'width',
      ]),
      'type': 'object',
      'x-presets': list([
        dict({
          'name': 'small',
          'values': dict({
            'count': 1,
            'width': 5.0,
          }),
        }),
      ]),
    }),
    'type': 'model.details',
  })
# ---
# name: test_ws_broadcast_reaches_client[Params-param_overrides0-run_error].2
  dict({
    'elapsed_ms': 234,
    'status': 'error',
    'type': 'model.status',
  })
# ---
# name: test_ws_broadcast_reaches_client[Params-param_overrides0-run_ok]
  dict({
    'session_id': 'deadbeef-0327-1138-2187-c01dc0ffee77',
    'type': 'hello',
    'version': dict({
      'bdbox': '11.38.77',
      'protocol': 2,
    }),
    'viewer_port': 3939,
  })
# ---
# name: test_ws_broadcast_reaches_client[Params-param_overrides0-run_ok].1
  dict({
    'model_info': dict({
      'class_name': None,
      'filename': None,
      'module_name': None,
    }),
    'params': dict({
      'overrides': dict({
      }),
      'values': dict({
        'count': 3,
        'width': 10.0,
      }),
    }),
    'schema': dict({
      'properties': dict({
        'count': dict({
          'default': 3,
          'type': 'number',
        }),
        'width': dict({
          'default': 10.0,
          'type': 'number',
        }),
      }),
      'required': list([
        'count',
        'width',
      ]),
      'type': 'object',
      'x-presets': list([
        dict({
          'name': 'small',
          'values': dict({
            'count': 1,
            'width': 5.0,
          }),
        }),
      ]),
    }),
    'type': 'model.details',
  })
# ---
# name: test_ws_broadcast_reaches_client[Params-param_overrides0-run_ok].2
  dict({
    'elapsed_ms': 123,
    'status': 'done',
    'type': 'model.status',
  })
# ---
# name: test_ws_broadcast_reaches_client[Params-param_overrides0-run_start]
  dict({
    'session_id': 'deadbeef-0327-1138-2187-c01dc0ffee77',
    'type': 'hello',
    'version': dict({
      'bdbox': '11.38.77',
      'protocol': 2,
    }),
    'viewer_port': 3939,
  })
# ---
# name: test_ws_broadcast_reaches_client[Params-param_overrides0-run_start].1
  dict({
    'model_info': dict({
      'class_name': None,
      'filename': None,
      'module_name': None,
    }),
    'params': dict({
      'overrides': dict({
      }),
      'values': dict({
        'count': 3,
        'width': 10.0,
      }),
    }),
    'schema': dict({
      'properties': dict({
        'count': dict({
          'default': 3,
          'type': 'number',
        }),
        'width': dict({
          'default': 10.0,
          'type': 'number',
        }),
      }),
      'required': list([
        'count',
        'width',
      ]),
      'type': 'object',
      'x-presets': list([
        dict({
          'name': 'small',
          'values': dict({
            'count': 1,
            'width': 5.0,
          }),
        }),
      ]),
    }),
    'type': 'model.details',
  })
# ---
# name: test_ws_broadcast_reaches_client[Params-param_overrides0-run_start].2
  dict({
    'started_at': '1977-05-25T11:38:00+00:00',
    'status': 'running',
    'type': 'model.status',
  })
# ---
# name: test_ws_broadcast_reaches_client[Params-param_overrides0-schema]
  dict({
    'session_id': 'deadbeef-0327-1138-2187-c01dc0ffee77',
    'type': 'hello',
    'version': dict({
      'bdbox': '11.38.77',
      'protocol': 2,
    }),
    'viewer_port': 3939,
  })
# ---
# name: test_ws_broadcast_reaches_client[Params-param_overrides0-schema].1
  dict({
    'model_info': dict({
      'class_name': None,
      'filename': None,
      'module_name': None,
    }),
    'params': dict({
      'overrides': dict({
      }),
      'values': dict({
        'count': 3,
        'width': 10.0,
      }),
    }),
    'schema': dict({
      'properties': dict({
        'count': dict({
          'default': 3,
          'type': 'number',
        }),
        'width': dict({
          'default': 10.0,
          'type': 'number',
        }),
      }),
      'required': list([
        'count',
        'width',
      ]),
      'type': 'object',
      'x-presets': list([
        dict({
          'name': 'small',
          'values': dict({
            'count': 1,
            'width': 5.0,
          }),
        }),
      ]),
    }),
    'type': 'model.details',
  })
# ---
# name: test_ws_broadcast_reaches_client[Params-param_overrides0-schema].2
  dict({
    'model_info': dict({
      'class_name': None,
      'filename': 'some_model.py',
      'module_name': None,
    }),
    'params': dict({
      'overrides': dict({
        'foo': 'bar',
      }),
      'values': dict({
        'a': 5.0,
        'b': 'nope',
      }),
    }),
    'type': 'model.details',
  })
# ---
# name: test_ws_broadcast_reaches_multiple_clients[Model-param_overrides0]
  dict({
    'session_id': 'deadbeef-0327-1138-2187-c01dc0ffee77',
    'type': 'hello',
    'version': dict({
      'bdbox': '11.38.77',
      'protocol': 2,
    }),
    'viewer_port': 3939,
  })
# ---
# name: test_ws_broadcast_reaches_multiple_clients[Model-param_overrides0].1
  dict({
    'model_info': dict({
      'class_name': None,
      'filename': None,
      'module_name': None,
    }),
    'params': dict({
      'overrides': dict({
      }),
      'values': dict({
        'count': 3,
        'width': 10.0,
      }),
    }),
    'schema': dict({
      'properties': dict({
        'count': dict({
          'default': 3,
          'type': 'number',
        }),
        'width': dict({
          'default': 10.0,
          'type': 'number',
        }),
      }),
      'required': list([
        'count',
        'width',
      ]),
      'type': 'object',
      'x-presets': list([
        dict({
          'name': 'small',
          'values': dict({
            'count': 1,
            'width': 5.0,
          }),
        }),
      ]),
    }),
    'type': 'model.details',
  })
# ---
# name: test_ws_broadcast_reaches_multiple_clients[Model-param_overrides0].2
  dict({
    'model_info': dict({
      'class_name': None,
      'filename': None,
      'module_name': None,
    }),
    'params': dict({
      'overrides': dict({
      }),
      'values': dict({
        'count': 3,
        'width': 10.0,
      }),
    }),
    'schema': dict({
      'properties': dict({
        'count': dict({
          'default': 3,
          'type': 'number',
        }),
        'width': dict({
          'default': 10.0,
          'type': 'number',
        }),
      }),
      'required': list([
        'count',
        'width',
      ]),
      'type': 'object',
      'x-presets': list([
        dict({
          'name': 'small',
          'values': dict({
            'count': 1,
            'width': 5.0,
          }),
        }),
      ]),
    }),
    'type': 'model.details',
  })
# ---
# name: test_ws_broadcast_reaches_multiple_clients[Model-param_overrides0].3
  dict({
    'started_at': '1977-05-25T11:38:00+00:00',
    'status': 'running',
    'type': 'model.status',
  })
# ---
# name: test_ws_broadcast_reaches_multiple_clients[Params-param_overrides0]
  dict({
    'session_id': 'deadbeef-0327-1138-2187-c01dc0ffee77',
    'type': 'hello',
    'version': dict({
      'bdbox': '11.38.77',
      'protocol': 2,
    }),
    'viewer_port': 3939,
  })
# ---
# name: test_ws_broadcast_reaches_multiple_clients[Params-param_overrides0].1
  dict({
    'model_info': dict({
      'class_name': None,
      'filename': None,
      'module_name': None,
    }),
    'params': dict({
      'overrides': dict({
      }),
      'values': dict({
        'count': 3,
        'width': 10.0,
      }),
    }),
    'schema': dict({
      'properties': dict({
        'count': dict({
          'default': 3,
          'type': 'number',
        }),
        'width': dict({
          'default': 10.0,
          'type': 'number',
        }),
      }),
      'required': list([
        'count',
        'width',
      ]),
      'type': 'object',
      'x-presets': list([
        dict({
          'name': 'small',
          'values': dict({
            'count': 1,
            'width': 5.0,
          }),
        }),
      ]),
    }),
    'type': 'model.details',
  })
# ---
# name: test_ws_broadcast_reaches_multiple_clients[Params-param_overrides0].2
  dict({
    'model_info': dict({
      'class_name': None,
      'filename': None,
      'module_name': None,
    }),
    'params': dict({
      'overrides': dict({
      }),
      'values': dict({
        'count': 3,
        'width': 10.0,
      }),
    }),
    'schema': dict({
      'properties': dict({
        'count': dict({
          'default': 3,
          'type': 'number',
        }),
        'width': dict({
          'default': 10.0,
          'type': 'number',
        }),
      }),
      'required': list([
        'count',
        'width',
      ]),
      'type': 'object',
      'x-presets': list([
        dict({
          'name': 'small',
          'values': dict({
            'count': 1,
            'width': 5.0,
          }),
        }),
      ]),
    }),
    'type': 'model.details',
  })
# ---
# name: test_ws_broadcast_reaches_multiple_clients[Params-param_overrides0].3
  dict({
    'started_at': '1977-05-25T11:38:00+00:00',
    'status': 'running',
    'type': 'model.status',
  })
# ---
# name: test_ws_connect_no_model_sends_no_schema[param_overrides0-None]
  dict({
    'session_id': 'deadbeef-0327-1138-2187-c01dc0ffee77',
    'type': 'hello',
    'version': dict({
      'bdbox': '11.38.77',
      'protocol': 2,
    }),
    'viewer_port': 3939,
  })
# ---
# name: test_ws_reset_params[Model-param_overrides]
  dict({
    'session_id': 'deadbeef-0327-1138-2187-c01dc0ffee77',
    'type': 'hello',
    'version': dict({
      'bdbox': '11.38.77',
      'protocol': 2,
    }),
    'viewer_port': 3939,
  })
# ---
# name: test_ws_reset_params[Model-param_overrides].1
  dict({
    'model_info': dict({
      'class_name': None,
      'filename': None,
      'module_name': None,
    }),
    'params': dict({
      'overrides': dict({
        'width': 99.0,
      }),
      'values': dict({
        'count': 3,
        'width': 10.0,
      }),
    }),
    'schema': dict({
      'properties': dict({
        'count': dict({
          'default': 3,
          'type': 'number',
        }),
        'width': dict({
          'default': 10.0,
          'type': 'number',
        }),
      }),
      'required': list([
        'count',
        'width',
      ]),
      'type': 'object',
      'x-presets': list([
        dict({
          'name': 'small',
          'values': dict({
            'count': 1,
            'width': 5.0,
          }),
        }),
      ]),
    }),
    'type': 'model.details',
  })
# ---
# name: test_ws_reset_params[Params-param_overrides]
  dict({
    'session_id': 'deadbeef-0327-1138-2187-c01dc0ffee77',
    'type': 'hello',
    'version': dict({
      'bdbox': '11.38.77',
      'protocol': 2,
    }),
    'viewer_port': 3939,
  })
# ---
# name: test_ws_reset_params[Params-param_overrides].1
  dict({
    'model_info': dict({
      'class_name': None,
      'filename': None,
      'module_name': None,
    }),
    'params': dict({
      'overrides': dict({
        'width': 99.0,
      }),
      'values': dict({
        'count': 3,
        'width': 10.0,
      }),
    }),
    'schema': dict({
      'properties': dict({
        'count': dict({
          'default': 3,
          'type': 'number',
        }),
        'width': dict({
          'default': 10.0,
          'type': 'number',
        }),
      }),
      'required': list([
        'count',
        'width',
      ]),
      'type': 'object',
      'x-presets': list([
        dict({
          'name': 'small',
          'values': dict({
            'count': 1,
            'width': 5.0,
          }),
        }),
      ]),
    }),
    'type': 'model.details',
  })
# ---
# name: test_ws_select_preset[Model-param_overrides0]
  dict({
    'session_id': 'deadbeef-0327-1138-2187-c01dc0ffee77',
    'type': 'hello',
    'version': dict({
      'bdbox': '11.38.77',
      'protocol': 2,
    }),
    'viewer_port': 3939,
  })
# ---
# name: test_ws_select_preset[Model-param_overrides0].1
  dict({
    'model_info': dict({
      'class_name': None,
      'filename': None,
      'module_name': None,
    }),
    'params': dict({
      'overrides': dict({
      }),
      'values': dict({
        'count': 3,
        'width': 10.0,
      }),
    }),
    'schema': dict({
      'properties': dict({
        'count': dict({
          'default': 3,
          'type': 'number',
        }),
        'width': dict({
          'default': 10.0,
          'type': 'number',
        }),
      }),
      'required': list([
        'count',
        'width',
      ]),
      'type': 'object',
      'x-presets': list([
        dict({
          'name': 'small',
          'values': dict({
            'count': 1,
            'width': 5.0,
          }),
        }),
      ]),
    }),
    'type': 'model.details',
  })
# ---
# name: test_ws_select_preset[Params-param_overrides0]
  dict({
    'session_id': 'deadbeef-0327-1138-2187-c01dc0ffee77',
    'type': 'hello',
    'version': dict({
      'bdbox': '11.38.77',
      'protocol': 2,
    }),
    'viewer_port': 3939,
  })
# ---
# name: test_ws_select_preset[Params-param_overrides0].1
  dict({
    'model_info': dict({
      'class_name': None,
      'filename': None,
      'module_name': None,
    }),
    'params': dict({
      'overrides': dict({
      }),
      'values': dict({
        'count': 3,
        'width': 10.0,
      }),
    }),
    'schema': dict({
      'properties': dict({
        'count': dict({
          'default': 3,
          'type': 'number',
        }),
        'width': dict({
          'default': 10.0,
          'type': 'number',
        }),
      }),
      'required': list([
        'count',
        'width',
      ]),
      'type': 'object',
      'x-presets': list([
        dict({
          'name': 'small',
          'values': dict({
            'count': 1,
            'width': 5.0,
          }),
        }),
      ]),
    }),
    'type': 'model.details',
  })
# ---
# name: test_ws_update_param[Model-param_overrides0]
  dict({
    'session_id': 'deadbeef-0327-1138-2187-c01dc0ffee77',
    'type': 'hello',
    'version': dict({
      'bdbox': '11.38.77',
      'protocol': 2,
    }),
    'viewer_port': 3939,
  })
# ---
# name: test_ws_update_param[Model-param_overrides0].1
  dict({
    'model_info': dict({
      'class_name': None,
      'filename': None,
      'module_name': None,
    }),
    'params': dict({
      'overrides': dict({
      }),
      'values': dict({
        'count': 3,
        'width': 10.0,
      }),
    }),
    'schema': dict({
      'properties': dict({
        'count': dict({
          'default': 3,
          'type': 'number',
        }),
        'width': dict({
          'default': 10.0,
          'type': 'number',
        }),
      }),
      'required': list([
        'count',
        'width',
      ]),
      'type': 'object',
      'x-presets': list([
        dict({
          'name': 'small',
          'values': dict({
            'count': 1,
            'width': 5.0,
          }),
        }),
      ]),
    }),
    'type': 'model.details',
  })
# ---
# name: test_ws_update_param[Params-param_overrides0]
  dict({
    'session_id': 'deadbeef-0327-1138-2187-c01dc0ffee77',
    'type': 'hello',
    'version': dict({
      'bdbox': '11.38.77',
      'protocol': 2,
    }),
    'viewer_port': 3939,
  })
# ---
# name: test_ws_update_param[Params-param_overrides0].1
  dict({
    'model_info': dict({
      'class_name': None,
      'filename': None,
      'module_name': None,
    }),
    'params': dict({
      'overrides': dict({
      }),
      'values': dict({
        'count': 3,
        'width': 10.0,
      }),
    }),
    'schema': dict({
      'properties': dict({
        'count': dict({
          'default': 3,
          'type': 'number',
        }),
        'width': dict({
          'default': 10.0,
          'type': 'number',
        }),
      }),
      'required': list([
        'count',
        'width',
      ]),
      'type': 'object',
      'x-presets': list([
        dict({
          'name': 'small',
          'values': dict({
            'count': 1,
            'width': 5.0,
          }),
        }),
      ]),
    }),
    'type': 'model.details',
  })
# ---
